@@ -1,4 +1,8 @@
-2012-19-30 (v0.2.0) Robin Gareus <robin@gareus.org>
+2013-01-02 (unreleased) Robin Gareus <robin@gareus.org>
+* add support for JSON output
+* separate format (-f) and unit (-u) options.
+
+2012-12-30 (v0.2.0) Robin Gareus <robin@gareus.org>
 * change default output format to seconds
 * add print --bounds only feature
 
